--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ header{
     height: 100px;
     background-color: white;
     position: fixed;
-    justify-content: center;
-    align-items: center;
     top: 0;
     left: 0;
     width: 100vw;
@@ -42,7 +40,7 @@ nav, nav li, .left-side, .right-side {
 }
 
 nav li{
-    padding: 0 5px;
+    padding: 0 10px;
     
 }
 
@@ -151,6 +149,134 @@ main .choices{
     margin: 30px 0;
 }
 
+/* The container */
+.container {
+    display: inline-block;
+    position: relative;
+    padding-left: 35px;
+    margin: 12px 20px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default radio button */
+  .container input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+    }
+    
+    /* Create a custom radio button */
+    .checkmark {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 25px;
+        width: 25px;
+        background-color: #eee;
+        border-radius: 50%;
+        border: 1px black solid; 
+    }
+    
+    /* On mouse-over, add a grey background color */
+    .container:hover input ~ .checkmark {
+        background-color: #ccc;
+    }
+    
+    /* When the radio button is checked, add a blue background */
+    .container input:checked ~ .checkmark {
+        background-color: #304ae0;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .container .checkmark:after {
+       top: 4px;
+      left: 4px;
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      background: white;
+  }
 
+  #columns{
+      height: 800px;
+      margin: 20px 0;
+      
+}
 
+.column{
+     float: left;
+      width: calc(100% / 3 - 40px);
+      height: 800px;
+      border: 1px solid darkgray ;
+  }
+
+  .column-bottom{
+      padding: 30px 10px 30px 30px;
+  }
+
+  
+  .column.two{
+      margin: 0 60px;
+  }
+
+  .first-cell{
+      text-align: center;
+      padding: 10px 0;
+      border-bottom: 1px solid darkgray;
+      color: darkslategray;
+  }
+  .column-bottom h3{
+      font-weight: 700;
+      padding: 0 0 20px 0;
+  }
+
+  .column.price{
+
+  }
+
+  .price-details{
+      color:rgb(139, 136, 136);
+      margin: 15px 0 50px 0;
+  }
+
+  .user-benefits{
+      margin-bottom: 40px;
+    }
+    
+    .user-benefits div, .user-benefits i{
+      display: inline;
+
+  }
+
+  .user-benefits span {
+    margin-left: 3px;
+    font-size: 12px;
+  }
+
+  .text{
+      width: 50px;
+  }
+  
+  .aquistaora-link{
+      color: blue;
+      text-decoration: underline;
+  }
+  
 
