--- a/style.css
+++ b/style.css
@@ -68,11 +68,15 @@ nav a:hover{
     
     color: white;
     background-color: rgba(44, 31, 230, 1);
+}
+
+#button-inizia, #prova-gratuita {
     padding: 9px 25px;
     border:none;
     cursor: pointer;
     margin-left: auto;
 }
+
 
 #button-inizia:hover{
     background-color: rgba(44, 31, 230, 0.8);
@@ -142,10 +146,13 @@ padding: 80px ;
     font-size: 30px;
 }
 
-main, .dropBox-business{
+main, .dropBox-business, #questions{
     width: 73%;
     margin: auto;
+}
+main, #questions{
     padding: 80px 0;
+
 }
 
 main .choices{
@@ -551,19 +558,62 @@ img
     
     background-color: lightblue;
     width: 100vw;
+    height: 350px;
+    position: relative;
 
 }
 
 .dropBox-business{
     height: 80px;
-    width: ;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
 }
 
 #under-sponsers-text{
     color: rgb(92, 15, 15);
     font-weight: 700;
     font-size: 40px;
+    display: inline-block;
+}
 
+#prova-gratuita{
+    float: right;
+    padding: 10px 60px;
+}
+#questions{
+    width: 60%;
+}
+.all-questions h4{
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 5;
+}
+
+
+.fa-angle-down, .fa-angle-up{
+    position: relative;
+    left: 850px;
+}
+
+.row-answer {
+    display: none;
+    line-height: 1.5;
+    font-size: 14px;
+}
+.row-question:hover + .row-answer{
+    display: block;
+}
+
+
+.row-question:hover .fa-angle-down,
+.fa-angle-up {
+    display: none;
+}
+.row-question:hover .fa-angle-up {
+    display: inline;
 }
 
 
