--- a/style.css
+++ b/style.css
@@ -85,18 +85,20 @@ nav a:hover{
 }
     
 .top-section{
-
+    
     margin: 100px 0;
     height: 100%;
     background-color: lightblue;
-
+    padding: 50px 0;
+    
 }
 
 .top-section h1{
     font-weight: bolder;
     font-size: 72px;
     line-height: 100px;
-   
+    
+    
 }
 
 .paragraph-top{
@@ -109,19 +111,21 @@ nav a:hover{
 }
 .container-jumbo{
    width: 89%;
-   margin: auto; 
+   margin: auto;
+   position: relative;
 }
-.img-jumbo{ 
-    width: 400px; 
-    position:relative;
-    top:120px;
-    left: 120px;   
+.container-jumbo img{ 
+    width:60%; 
+    position:absolute;
+    left: 341px;   
 }
 
 .img-jumbo img{
-    width: 100%;
-    height: 100%;
+    width: 55%;
     object-fit: cover;
+    position: absolute;
+    top:180px;
+    left: 520px;
 
 }
 .img-jumbo, .paragraph-top{
