--- a/style.css
+++ b/style.css
@@ -10,18 +10,19 @@ body{
 
 header{
     height: 100px;
+    width: 100%;
     background-color: white;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
     z-index: 999;
 }
 
 .wrapper{
-    margin: auto;
+    margin: 0 auto;
     max-width: 1472px;
     line-height: 90px;
+    height: 100%;
 }
 
 
@@ -83,12 +84,12 @@ nav a:hover{
 
 }
     
-
 .top-section{
-margin: 100px 0;
-height: 658px;
-background-color: lightblue;
-padding: 80px ;
+
+    margin: 100px 0;
+    height: 100%;
+    background-color: lightblue;
+
 }
 
 .top-section h1{
@@ -100,49 +101,39 @@ padding: 80px ;
 
 .paragraph-top{
     width: 300px;
-    float: left;
     font-size: 16px;
-    line-height: 20px;
-    
+    line-height: 20px;  
 }
-
+.paragraph-top p{
+    width: 307px;
+}
 .container-jumbo{
    width: 89%;
-   margin: auto;
+   margin: auto; 
 }
-
-.img-jumbo{
-    
-    height: 444px;
-    width: 768px;
+.img-jumbo{ 
+    width: 400px; 
     position:relative;
-    top:0;
-    left: 120px;
-    background-image: url(img/jumbo.png);
-    background-size: cover;
-    background-position: center;
-    display: inline-block;
-    
+    top:120px;
+    left: 120px;   
 }
 
 .img-jumbo img{
     width: 100%;
-    
-    
+    height: 100%;
+    object-fit: cover;
+
 }
-
-
-.img-jumbo, .top-section p{
+.img-jumbo, .paragraph-top{
     display: inline-block;
     
 }
-
 .prova-button{
-    margin: 40px 0 20px 0;
+    margin: 30px 0 20px 0;
 }
 
 #arrow-downlaod{
-    margin: 50px 0;
+    margin: 40px 0;
     font-size: 30px;
 }
 
@@ -257,14 +248,14 @@ main .choices{
       padding: 0 0 20px 0;
   }
 
-img
+
   .price-details{
       color:rgb(139, 136, 136);
       margin: 15px 0 50px 0;
   }
 
   .user-benefits{
-      margin-bottom: 40px;
+      margin:0 0 40px 19px;
     }
     
     .user-benefits div, .user-benefits i{
@@ -272,10 +263,15 @@ img
 
   }
 
-  .user-benefits span {
-    margin-left: 3px;
+  .user-benefits i{
+      margin-left: -19px;
+  }
+
+
+  .user-benefits .text {
     font-size: 12px;
   }
+
 
 
   .aquista-line{
